src/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;500;600;700&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    width: 100%;
    overflow-x: hidden;
    font-family: 'Red Rose', cursive;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 6rem;
}

.navbar--logo {
    width: 9rem;
}

.navbar--menu {
    display: flex;
    width: 65%;
    justify-content: space-between;
    align-items: center;
}

.navbar--navLinks,
.links {
    display: flex;
    gap: 2rem;
}

.navbar--navLinks > a,
.links > a {
    text-decoration: none;
    color: #434343;
    font-size: 0.9rem;
}

.hamburger_menu {
    display: none;
    width: 1.6rem;
    height: 1.4rem;
    position: relative;
    cursor: pointer;
    background: transparent;
    border: none;
}

.hamburger_menu:focus {
    outline: none;
}

.hamburger {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 0.2rem;
    background-color: #1D1D1E;
    border-radius: 2px;
}

.hamburger.top {
    top: 0.09rem;
}

.hamburger.middle {
    top: 0.45rem;
}

.hamburger.bottom {
    top: 0.8rem;
}

.mobilemenulist {
    width: 100vw;
    height: 100vh;
    z-index: 999;
    position: fixed;
    display: flex;
    justify-content: flex-end;
    background-color: rgba(163, 163, 163, 0.3);
    border: none;
}

.mobilemenulist--content {
    position: relative;
    width: 50%;
    height: 100%;
    display: flex;
    row-gap: 1.5rem;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #FFFFFF;
    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.2);
    font-weight: 700;
    font-size: 1.2rem;
    animation: 0.5s menuBtn;
}

@keyframes menuBtn {
    0% {
        transform: translateX(50%);
        transition: 0.3s ease-in-out;
    }
    100% {
        transform: translateX(0);
        transition: 0.3s ease-in-out;
    }
}

.mobilemenulist--content img {
    position: absolute;
    right: 1.2rem;
    top: 1.2rem;
}

.mobilemenulist--navbar--navLinks {
    display: flex;
    flex-direction: column;
    text-align: center;
    row-gap: 1.2rem;
}

.mobilemenulist--navbar--navLinks a {
    text-decoration: none;
    color: black;
}

.hero--main {
    padding: 6rem 6rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 6.2rem;
    height: auto;
}

.hero--main_left {
    width: 50%;
}

.hero--main_left > h1 > span {
    color: #A02279;
}

.hero--main_left > h1 {
    line-height: 140%;
    font-size: 3rem;
}

.hero--main_left > p {
    line-height: 1.5;
    margin: 2rem 0;
    font-size: 1.1rem;
    font-weight: 400;
}

.hero--search {
    width: 95%;
    display: flex;
}

.hero--search input {
    width: 68%;
    padding: 0.6rem 1rem;
    border: 1px solid #A3A3A3;
    font-size: 12px;
    font-family: 'Red Rose', cursive;
    border-radius: 8px 0 0 8px;
}

.hero--search--button {
    width: 32%;
    border: none;
    font-size: 12px;
    color: white;
    background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.46%);
    border-radius: 0 8px 8px 0;
    cursor: pointer;
}

.hero--search input:focus, 
.hero--search--button:focus {
    outline: none;
    font-family: 'Red Rose';
}

.hero--main_right {
    width: 25rem;
}

.hero--main_right > img {
    width: 100%;
}

.logos {
    background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.46%);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.2rem 7rem;
}

.logos img {
    width: 9rem;
}

.adventure,
.main {
    padding: 0 6rem;
}

.adventure h2 {
    text-align: center;
    margin: 2.7rem 0;
    font-size: 30px;
    font-weight: 700;
}

.adventure--images, 
.main {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 0.8rem;
    width: 100%;
    overflow: hidden;
}

.adventure--images--boxes,
.main--images--boxes {
    border: 1px solid #D7D7D7;
    border-radius: 15px;
    padding: 0.6rem;
    width: auto;
    font-size: 12px;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
}

.adventure--images--boxes:hover,
.main--images--boxes:hover {
    transform: scale(1.05);
}

.adventure--images--boxes .img,
.main--images--boxes .img {
    width: 100%;
    height: 13rem;
}

.box--texts1,
.box--texts2 {
    display: flex;
    justify-content: space-between;
    margin: 0.9rem 0;
    padding: 0 0.6rem;
}

.box--texts1 p,
.box--texts2 p {
    font-weight: 400;
    color: #434343;
}

.box--texts1 .nights {
    font-weight: 700;
}

.box--stars {
    display: flex;
    gap: 0.3rem;
    padding: 0 0.6rem 0.6rem;
}

.metabnbNft {
    /* height: 774px; */
    background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
    border: 1px solid #000000;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 4rem;
    padding: 6rem;
    gap: 6.2rem;
}

.metabnbNft--left {
    color: #FFFFFF;
    width: 100%;
}

.metabnbNft--left p {
    line-height: 1.8;
    margin: 38px 0;
    font-size: 15px;
}

.metabnbNft img {
    width: 31.5rem;
}

.footer {
    background-color: #1D1D1E;
    height: 322px;
}

.footer--nav {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 5rem;
    /* gap: 80px; */
    color: #FFFFFF;
    height: 212px;
    padding: 3rem 6rem 1rem 6rem;
}

.footer--logo--socials {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-right: 3.8rem;
}

.footer--logo img {
    width: 10rem;
}

.footer--socials {
    display: flex;
    gap: 1.9rem;
}

.footer--socials img {
    cursor: pointer;
}

.footer--navigations {
    display: flex;
    flex-direction: column;
    row-gap: 0.63rem;
}

.footer--navigations h3 {
    margin-bottom: 0.6rem;
}

.footer--navigations p {
    cursor: pointer;
    font-size: 12px;
}

.footer--copyright {
    padding: 0 6rem;
    color: #FFFFFF;
    display: flex;
    align-items: center;
    height: 110px;
}

.footer--copyright p {
    font-size: 15px;
}

.main {
    margin-bottom: 4rem;
}

.links {
    margin: 5rem 0 4rem 0;
    align-items: center;
    /* gap: 40px; */
    gap: 2.5rem;
    padding: 0 6rem;
}

.location_icon {
    width: 80%;
}

.connectwallet {
    width: 100vw;
    height: 100vh;
    background-color: rgba(163, 163, 163, 0.3);
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    z-index: 9999;
}

.connectwallet--modal {
    width: 37.5rem;
    min-height: 20.375rem;
    background-color: #FFFFFF;
    border-radius: 1rem;
    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.3),
                -2px -2px 6px rgba(0, 0, 0, 0.2);
}

.modal--text_closeBtn {
    padding: 1.5rem 2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #D7D7D7;
}

.modal--text_closeBtn p {
    font-size: 1.5rem;
    color: #333333;
    font-weight: 700;
}

.modal--text_closeBtn img {
    width: 1.5rem;
    cursor: pointer;
}

.modal--wallets {
    padding: 2rem;
    display: flex;
    flex-direction: column;
    row-gap: 1.5rem;
}

.modal--wallets p {
    font-size: 1rem;
    color: #333333;
    font-weight: 400;
}

.wallets {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.75rem 1.25rem;
    border: 1px solid #CFD8DC;
    background-color: #F8F9FA;
    border-radius: 0.75rem;
    cursor: pointer;
}

.wallets--image {
    height: 2.75rem;
}

.wallets--slide {
    width: 1.25rem;
    height: 1.25rem;
}



/* MEDIA QUERIES */

/* Medium Screens */

@media screen and (min-width: 641px) and (max-width: 1007px) {

    .navbar {
        padding: 2rem 4rem;
    }
    
    .navbar--menu {
        display: none;
    }

    .hamburger_menu {
        display: block;
    }

    .links {
        padding: 0 4rem;
        flex-wrap: wrap;
        overflow-x: hidden;
    }

    .hero--main {
        flex-direction: column;
        height: auto;
        margin-bottom: 1.2rem;
    }

    .hero--main_left {
        margin-top: 6rem;
        width: 100%;
        /* text-align: center; */
    }

    .hero--main,
    .adventure,
    .footer--copyright {
        padding: 0 4rem;
    }

    .logos {
        padding: 1.2rem 4rem;
    }

    .adventure--images,
    .main {
        grid-template-columns: repeat(2, 1fr);
    }

    .metabnbNft {
        padding: 4rem;
        flex-direction: column;
        text-align: center;
    }

    .footer {
        height: auto;
    }
    
    .footer--nav {
        padding: 5rem 4rem 0 4rem;
        grid-template-columns: repeat(2, 1fr);
        height: auto;
    }

    .footer--logo--socials {
        margin-right: 0;
    }
}


/* Small (mobile) Screens */

@media screen and (max-width: 641px) {

    .navbar {
        padding: 1.2rem;
    }

    .navbar--menu {
        display: none;
    }

    .hamburger_menu {
        display: block;
    }

    .links {
        padding: 0 1.5rem;
        flex-wrap: wrap;
        overflow-x: hidden;
    }

    .hero--main {
        padding: 0 1.2rem;
        flex-direction: column;
        height: auto;
        margin-bottom: 1.2rem;
    }

    .hero--main_left {
        margin-top: 3rem;
        width: 100%;
        text-align: center;
    }

    .hero--main_left h1,
    .adventure h2 {
        font-size: 2rem;
    }

    .hero--main_right {
        width: 100%;
    }
    
    .logos {
        padding: 1.5rem;
        width: 100%;
        flex-direction: column;
        row-gap: 1.2rem;
    }

    .adventure {
        padding: 0 1.2rem;
    }

    .adventure--images,
    .main {
        padding: 0 1.5rem;
        grid-template-columns: repeat(1, 1fr);
    }

    .metabnbNft {
        padding: 2rem 1.2rem;
        flex-direction: column;
        text-align: center;
    }

    .metabnbNft img {
        width: 100%;
    }

    .footer {
        display: flex;
        flex-direction: column;
        align-items: center;
        height: auto;
        text-align: center;
    }
    
    .footer--nav {
        grid-template-columns: repeat(1, 1fr);
        height: auto;
    }

    .footer--logo--socials {
        margin-right: 0;
        align-items: center;
        row-gap: 2rem;
    }

    .footer--copyright {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .connectwallet--modal {
        width: 21rem;
    }
}

